# main.go
@@ -10,7 +10,7 @@ import (
 	"github.com/Nelwhix/duolingo-medlab-go/handlers"
 	"github.com/Nelwhix/duolingo-medlab-go/pkg"
 	"github.com/Nelwhix/duolingo-medlab-go/pkg/mailer"
-	"github.com/Nelwhix/duolingo-medlab-go/pkg/middlewares"
+	"github.com/Nelwhix/duolingo-medlab-go/pkg/middleware"
 	"github.com/Nelwhix/duolingo-medlab-go/pkg/models"
 	"github.com/aws/aws-sdk-go-v2/config"
 	"github.com/aws/aws-sdk-go-v2/service/sesv2"
@@ -63,12 +63,18 @@ func main() {
 		Mailer:    sesMailer,
 	}
 
+	middleWare := middleware.Middleware{
+		Model: model,
+	}
+
 	// Guest Routes
 	r.HandleFunc("GET /api/v1/ping", handler.Pong)
 	r.HandleFunc("POST /api/v1/auth/signup", handler.SignUp)
 	r.HandleFunc("POST /api/v1/auth/login", handler.Login)
 	r.HandleFunc("POST /api/v1/auth/forgot-password", handler.ForgotPassword)
 	r.HandleFunc("POST /api/v1/auth/reset-password", handler.ResetPassword)
+	r.Handle("PATCH /api/v1/users/{id}", middleWare.Auth(http.HandlerFunc(handler.UpdateUser)))
+	r.Handle("GET /api/v1/departments", middleWare.Auth(http.HandlerFunc(handler.GetDepartments)))
 
 	fs := http.FileServer(http.Dir("./swagger-ui"))
 	r.Handle("GET /docs/", http.StripPrefix("/docs/", fs))
@@ -82,7 +88,7 @@ func main() {
 		Debug:            false,
 	})
 
-	err = http.ListenAndServe(":8080", gHandlers.CombinedLoggingHandler(os.Stdout, c.Handler(middlewares.ContentTypeMiddleware(r))))
+	err = http.ListenAndServe(":8080", gHandlers.CombinedLoggingHandler(os.Stdout, c.Handler(middleware.ContentTypeMiddleware(r))))
 	if err != nil {
 		log.Printf("failed to run the server: %v", err)
 	}
